Added paging to templates